初步移植修改